# Macows-Explorer

./: CHANGELOG.md  CLAUDE.md  COMMUNITY_MODULES.md  README.md  commitlint.config.cjs  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  release-please-config.json
.changeset/: create-safety-md-document.md  local-install-context-menu.md  nonblocking-http-and-picker-bg.md  scaffold-auto-build-workflow.md
.claude/skills/: commit-conventions.md  cut-release.md  update-docs.md
.githooks/: commit-msg
.github/workflows/: _discord_notif.yml  cancel-on-merge.yml  commitlint.yml  deploy.yml  release-please.yml  release.yml
docs/: events.md  releasing.md  safety.md
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_ops.rs  http.rs  icons.rs  launch.rs  lib.rs  preview.rs
src/components/Dialog/: Dialog.css  Dialog.tsx
src/components/FileBrowser/: FileBrowser.css  FileBrowser.tsx
src/components/FileList/: FileList.tsx
src/components/FilePicker/: FilePicker.css  FilePickerModal.tsx
src/core/: CLAUDE.md  types.ts
src/sandbox-builtins/: local-installer.ts  open-with.ts  preview.ts
src/styles/: base.css
website/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json  typedoc-fumadocs.mjs  typedoc.json
website/app/: global.css  layout.config.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  robots.ts  sitemap.ts  twitter-image.tsx
website/lib/: source.ts
(+88 files in other folders)
