[package]
name = "macows-explorer"
version = "0.1.0"
description = "Community-driven macOS file explorer"
authors = ["Macows Explorer contributors"]
license = "MIT"
homepage = "https://github.com/ilianAZZ/Macows-Explorer"
repository = "https://github.com/ilianAZZ/Macows-Explorer"
keywords = ["macos", "file-explorer", "tauri", "modular"]
categories = ["gui"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "macows_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
